--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
-site_name: Python SDK
-site_url: https://refuel.ai/python-sdk
+site_name: Refuel Docs
+site_url: https://refuel.ai/
 repo_url: https://github.com/refuel-ai/refuel-docs
 repo_name: refuel-ai/refuel-docs
 
 nav:
-  - Guide:
-      - Introduction: index.md
+  - Landing Page: index.md
+  - SDK Guide: python-sdk.md
 
 theme:
   name: material
