--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Refuel Docs
-site_url: https://refuel.ai
+site_url: ""
 repo_url: https://github.com/refuel-ai/refuel-docs
 repo_name: refuel-ai/refuel-docs
 
