This should make it work! If we change the autolabel/docs code formatting

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ nav:
   - Integrations:
       - Introduction: integrations/introduction.md
       - AWS: integrations/aws.md
-  - autolabel/docs:
+  - Autolabel Docs:
       - Introduction: autolabel/docs/index.md
       - Getting Started: autolabel/docs/guide/overview/getting-started.md
       - Tutorial - Toxic comment classification: autolabel/docs/guide/overview/tutorial-classification.md
